--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -193,3 +193,60 @@ footer {
         }
     }
 }
+
+@media(max-width:740px) {
+    footer {
+        height: 100vh;
+        background-size: cover;
+        .footer-container {
+            .footer-main {
+                max-width: none;
+                display: inherit;
+                .footer-intro-item {
+                    width: 90%;
+                    margin: 0 auto;
+                    padding: 20px 0px;
+                }
+            }
+        }
+    }
+    
+    .footer-lashWord {
+        height: 40vh;
+        .footer-lashWord-container {
+            .footer-lashWord-main {
+                max-width: none;
+                .footer-epilogue {
+                    max-width: none;
+                    display: inherit;
+                    align-items: center;
+                    justify-content: space-between;
+                    img {
+                        width: 30%;
+                    }
+                    p {
+                        display: block;
+                        width: 60%;
+                        color: #fff;
+                        font-size: 18px;
+                        line-height: 20px;
+                        margin-left: 8px;
+                    }
+                }
+        
+                .line {
+                    width: 100%;
+                    height: 1.5px;
+                    background-color: #666666;
+                    margin-bottom: 30px;
+                    margin-top: 30px;
+                }
+                span {
+                    color: #fff;
+                    font-size: 18px;
+                    margin-left: 8px;
+                }
+            }
+        }
+    }
+}
