--- a/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
+++ b/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
@@ -163,3 +163,57 @@
         }
     }
 }
+
+@media (max-width:740px) {
+    .check-our-menu {
+        height: 110vh;
+        .check-our-menu-container {
+            position: relative;
+            text-align: center;
+            h2 {
+                font-size: 50px;
+            }
+            h3 {
+                font-size: 50px;
+            }
+            .intro-icons {
+                display: flex;
+                max-width: 500px;
+                margin: 30px auto;
+                justify-content: space-between;
+                .intro-icon {
+                    padding: 0 0px;
+                    i {
+                        font-size: 17px;
+                    }
+                    p {
+                        font-size: 10px;
+                    }
+                }
+            }
+            .check-our-menu-slider {
+                margin-top: 30px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                i {
+                    display: none;
+                }
+    
+                .check-our-menu-slider-container {
+                    overflow: hidden;
+                    .check-our-menu-slider-main {
+                        max-width: 300px;
+                        justify-content: center;
+                        .check-our-menu-slider-item {
+                            width: 100%;
+                            flex: 1 0 100%;
+                            margin-left: 30px;
+                            margin-right: 30px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
