--- a/src/components/Home/intro-content/MakeaReservation/MakeaReservation.scss
+++ b/src/components/Home/intro-content/MakeaReservation/MakeaReservation.scss
@@ -102,3 +102,70 @@
         }
     }
 }
+
+@media (max-width:740px) {
+    .make-a-reservation {
+        height: 100vh;
+        .make-a-reservation-container {
+            .make-a-reservation-main {
+                max-width: none;
+                margin: 0 auto;
+                display: inherit;
+                img {
+                    display: none;
+                }
+    
+                .form {
+                    width: 90%;
+                    height: 550px;
+                    margin: 0 auto;
+                    form {
+                        margin: 0 auto;
+                        text-align: center;
+                        label {
+                            display: block;
+                            text-align: center;
+                            color: #000;
+                            font-size: 25px;
+                            font-weight: 500;
+                        }
+                        input {
+                            display: inline-block;
+                            margin: 0 auto;
+                            margin-top: 20px;
+                            width: 80%;
+                            height: 50px;
+                            padding: 0px 20px;
+                            color: #666666;
+                            outline: none;
+                        }
+                        select {
+                            width: 80%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            color: #666666;
+                        }
+                        button {
+                            width: 80%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            font-size: 15px;
+                            font-weight: 700;
+                            color: #fff;
+                            background-color: #bc906b;
+                            border: none;
+                            transition: all 0.5s ease;
+                        }
+    
+                        button:hover {
+                            background-color: #000;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
