--- a/src/components/Home/slider/slider.scss
+++ b/src/components/Home/slider/slider.scss
@@ -192,3 +192,96 @@
         }
     }
 }
+
+@media (max-width:740px) {
+    .slider {
+        .slider-main { 
+            margin-bottom: 40px;
+            #item-one {
+                padding-top: 110%;
+            }
+            #item-two {
+                padding-top: 110%;
+            }
+            #item-three {
+                padding-top: 110%;
+            }
+    
+            .slider-item {
+                position: relative;
+                .item-content {
+                    h2 {
+                        font-size: 30px;
+                    }
+                    h1 {
+                        font-size: 65px;
+                    }
+                    span {
+                        p {
+                            letter-spacing: 3px;
+                        }
+                    }
+                    span::before {
+                        display: none;
+                    }
+                    span::after {
+                        display: none;
+                    }
+                }
+            }
+        }
+        .intro-cotnent {
+            display: inherit;
+            position: inherit;
+            .intro-tiem {
+                width: 80%;
+                margin: 0 auto;
+                padding: 50px 0px;
+                background-color: #fff;
+                text-align: center;
+                border: 0.1px solid rgb(250, 228, 228);
+                box-shadow: #000;
+                img {
+                    display: block;
+                    width: 40%;
+                    margin: 0 auto;
+                    transition: all 0.5s ease;
+                }
+                h3 {
+                    font-family: 'ZCOOL XiaoWei', serif;
+                    font-size: 20px;
+                    font-weight: 500;
+                    display: inline-block;
+                    color: #9a9696;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    h4 {
+                        font-family: 'ZCOOL XiaoWei', serif;
+                        display: inline-block;
+                        color: #bc906b;
+                        font-weight: 500;
+                    }
+                }
+                p {
+                    font-size: 17px;
+                    font-family: 'ZCOOL XiaoWei', serif;
+                    color: #9a9696;
+                    width: 80%;
+                    margin: 0 auto;
+                    line-height: 20px;
+                }
+            }
+            @keyframes up_down {
+                0%   {transform: translateY(0px);}
+                25%  {transform: translateY(-20px);}
+                50%  {transform: translateY(-30px);}
+                75%  {transform: translateY(-20px);}
+                100% {transform: translateY(0px);}
+            }
+            .intro-tiem:hover img {
+                cursor: pointer;
+                animation: up_down 1s ease;
+            }
+        }
+    }
+}
