--- a/src/components/Home/intro-content/OurExperienceChefs/OurExperienceChefs.scss
+++ b/src/components/Home/intro-content/OurExperienceChefs/OurExperienceChefs.scss
@@ -105,6 +105,10 @@
     .our-experience-chefs {
         padding-top: 50px;
         padding-bottom: 50px;
+        h2 ,
+        h3 {
+            font-size: 35px;
+        }
         .image-chef-container {
             max-width: none;
             display: inherit;
