--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -196,7 +196,7 @@ footer {
 
 @media(max-width:740px) {
     footer {
-        height: 100vh;
+        height: auto;
         background-size: cover;
         .footer-container {
             .footer-main {
@@ -206,6 +206,49 @@ footer {
                     width: 90%;
                     margin: 0 auto;
                     padding: 20px 0px;
+                    h3 {
+                        margin-bottom: 35px;
+                        font-size: 30px;
+                        font-weight: 500;
+                        color: #666666;
+                    }
+                    span {
+                        display: block;
+                        i {
+                            font-size: 23px; 
+                        }
+                        p {
+                            font-size: 20px;
+                        }
+                        margin-bottom: 20px;
+                        margin-top: 10px;
+                    }
+                    h2 {
+                        font-size: 15px;
+                        color: #bc906b;
+                        margin-top: 26px;
+                        position: relative;
+                        display: inline-block;
+                    }
+                    h4 {
+                        width: 100%;
+                        font-size: 15px;
+                    }
+                    button {
+                        margin-top: 20px;
+                        width: 130px;
+                        font-size: 13px;
+                    }
+                    table {
+                        margin: 0 auto;
+                        tr {
+                            td {
+                                font-size: 17px;
+                                color: #666666;
+                                padding: 5px 20px;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -226,9 +269,9 @@ footer {
                     }
                     p {
                         display: block;
-                        width: 60%;
+                        width: 70%;
                         color: #fff;
-                        font-size: 18px;
+                        font-size: 15px;
                         line-height: 20px;
                         margin-left: 8px;
                     }
@@ -238,12 +281,12 @@ footer {
                     width: 100%;
                     height: 1.5px;
                     background-color: #666666;
-                    margin-bottom: 30px;
-                    margin-top: 30px;
+                    margin-bottom: 20px;
+                    margin-top: 20px;
                 }
                 span {
                     color: #fff;
-                    font-size: 18px;
+                    font-size: 15px;
                     margin-left: 8px;
                 }
             }
