--- a/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
+++ b/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
@@ -166,25 +166,25 @@
 
 @media (max-width:740px) {
     .check-our-menu {
-        height: 110vh;
+        height: 130vh;
         .check-our-menu-container {
             position: relative;
             text-align: center;
             h2 {
-                font-size: 50px;
+                font-size: 35px;
             }
             h3 {
-                font-size: 50px;
+                font-size: 35px;
             }
             .intro-icons {
                 display: flex;
-                max-width: 500px;
+                width: 90%;
                 margin: 30px auto;
                 justify-content: space-between;
                 .intro-icon {
                     padding: 0 0px;
                     i {
-                        font-size: 17px;
+                        font-size: 16px;
                     }
                     p {
                         font-size: 10px;
@@ -206,10 +206,46 @@
                         max-width: 300px;
                         justify-content: center;
                         .check-our-menu-slider-item {
-                            width: 100%;
-                            flex: 1 0 100%;
+                            width: 80%;
+                            flex: 1 0 80%;
                             margin-left: 30px;
                             margin-right: 30px;
+                            height: 60vh;
+                            .container-img {
+                                margin-top: 30px;
+                                img {
+                                    width: 65%;
+                                    height: 50%;
+                                    border-radius: 50%;
+                                    transition: all 0.5s ease;
+                                }
+                                img:hover {
+                                    transform: scale(0.9);
+                                }
+                            }
+                            .cost {
+                                bottom: 50%;
+                                right: 20%;
+                                padding: 18px 17px;
+                                font-size: 20px;
+                            }
+                            h3 {
+                                display: block;
+                                font-family: 'ZCOOL XiaoWei', serif;
+                                font-weight: 500;
+                                font-size: 20px;
+                                margin-top: 20px;
+                            }
+        
+                            p {
+                                display: block;
+                                width: 90%;
+                                margin: 0 auto;
+                                font-size: 16px;
+                                color: #666666;
+                                margin-top: 10px;
+                            }
+        
                         }
                     }
                 }
